--- a/.github/workflows/master_stingy.yml
+++ b/.github/workflows/master_stingy.yml
@@ -14,7 +14,7 @@ jobs:
 #    runs-on: self-hosted
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
