--- a/.github/workflows/master_stingy.yml
+++ b/.github/workflows/master_stingy.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy stingy-app
+name: Build and deploy ASP.Net Core app to Azure Web App - stingy
 
 on:
   push:
@@ -11,24 +11,23 @@ on:
 
 jobs:
   build:
-#    runs-on: self-hosted
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v5.0.1
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "10.x"
+          dotnet-version: '10.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release src/Bootstrapper/Stingy.App/Stingy.App.csproj
+        run: dotnet build --configuration Release
 
-      - name: dotnet publish (Bootstrapper only)
-        run: dotnet publish src/Bootstrapper/Stingy.App/Stingy.App.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -38,9 +37,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-#    runs-on: self-hosted
     needs: build
-
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -50,20 +47,19 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-          path: ${{ github.workspace }}/myapp
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_13257C10E67343ED85126FC0985EB664 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0EACA6D3BBA54F7089843FDD307373C9 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D33A2FB2C9AA431EB74B7E0AE209585E }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FED58FF040324A509B62F5B34B64CA11 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_32BED529E72C4AB7991CAFED2E0441AF }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F0D4C37CA29B4E1FB6489D6170C846AA }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "stingy-app"
-          slot-name: "Production"
-          package: ${{ github.workspace }}/myapp
-          startup-command: "dotnet Stingy.App.dll"
+          app-name: 'stingy'
+          slot-name: 'Production'
+          package: .
+          
