--- a/src/Bootstrapper/Stingy.App/appsettings.json
+++ b/src/Bootstrapper/Stingy.App/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "App": {
+    "Name": "Stingy"
+  }
 }
